--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Di Buffala | Diseño de interiores</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -166,7 +167,7 @@
 <!-- hola -->
   <!-- Footer -->
   <footer class="footer_di-buffala">
-    <small>DiBufalla 2018. Todos los derechos reservados.</small>
+    <small>DiBufalla 2024. Todos los derechos reservados.</small>
   </footer>
 
 
